# RuneC

./: .gitignore  AGENT_README.md  CMakeLists.txt  README.md  changelog.md  database.md  ignore.md  references.md  things.md  viewer_validation.md  work.md
.claude/: settings.local.json
data/anims/: all.anims  npcs.anims
data/curated/: activity_spawns.toml  regular_npc_special_mechanics.toml
data/curated/dialogue/: 2013_Christmas_event.toml  2013_Easter_event.toml  2013_Goblin_Invasion.toml  2013_Halloween_event.toml  2013_Midsummer_event.toml  2013_Rare_Drops.toml  2013_Thanksgiving_event.toml  2014_April_Fools.toml  2014_Birthday_event.toml  2014_Christmas_event.toml  2014_Easter_event.toml  2014_Goblin_Invasion.toml  2014_Halloween_event.toml  2014_Midsummer_event.toml  2014_Valentine_s_Day_event.toml  2015_April_Fools.toml  2015_Christmas_event.toml  2015_Easter_event.toml  2015_Halloween_event.toml  2015_Midsummer_event.toml  (+360 more)
data/models/: npcs.models  player.models
rc-content/: README.md  content.c  content.h
rc-content/encounters/: README.md  kalphite_queen.c  scurrius.c
rc-content/quests/: README.md
rc-content/regions/: README.md
rc-core/: README.md  api.h  combat.c  combat.h  config.c  config.h  dialogue.c  dialogue.h  encounter.c  encounter.h  encounter_prims.c  events.c  events.h  handles.h  io.h  items.c  items.h  npc.c  npc.h  pathfinding.c  pathfinding.h  prayer.c  prayer.h  quests.c  quests.h  rng.h  shops.c  shops.h  skills.c  skills.h  tick.c  types.h  world.c
rc-viewer/: README.md  anims.h  collision.h  models.h  objects.h  terrain.h  viewer.c
tests/: test_base_only.c  test_collision.c  test_combat.c  test_combat_e2e.c  test_determinism.c  test_encounter.c  test_encounter_bin.c  test_encounter_prims.c  test_npc_defs_bin.c  test_pathfinding.c
tools/: audit_npc_reconciliation.py  audit_npc_semantics.py  database_sources.py  export_collision.py  export_dialogue.py  export_drops.py  export_encounters.py  export_items.py  export_music.py  export_npc_anims.py  export_npc_defs_full.py  export_npc_models_full.py  export_npcs.py  export_objects_all_planes.sh  export_objects_bridge.py  export_quests.py  export_recipes.py  export_shops.py  export_skill_drops.py  export_spawns.py  export_spells.py  export_varbits.py  export_varps.py  extract_dialogue.py  extract_mechanics.py  extract_quest_steps.py  patch_npc_defs_wiki.py  scrape_all.py  scrape_bosses.py  scrape_item_specials.py  scrape_rdt.py  scrape_shallow.py  scrape_slayer.py  scrape_strategies.py  scrape_transcripts.py  wiki_bucket.py  wiki_client.py  wiki_pages.py  xvalidate.py
tools/reports/: bosses_templates.txt  database_audit.txt  dialogue.txt  drops.txt  encounters.txt  item_specials.txt  mechanics_extract.txt  npc_defs_full.txt  npc_models_full.txt  npc_reconciliation.txt  npc_semantics.txt  quest_steps.txt  rdt_gdt.txt  skill_drops.txt  slayer.txt  spawn_coverage.txt  strategies_missing.txt  strategies_sections.txt  strategies_templates.txt  transcripts.txt  xvalidate_bonuses.txt  xvalidate_monsters.txt
tools/wiki_cache/: dropsline_1cca5e8a5c_000000.json  dropsline_1cca5e8a5c_000500.json  dropsline_1cca5e8a5c_001000.json  dropsline_1cca5e8a5c_001500.json  dropsline_1cca5e8a5c_002000.json  dropsline_1cca5e8a5c_002500.json  dropsline_1cca5e8a5c_003000.json  dropsline_1cca5e8a5c_003500.json  dropsline_1cca5e8a5c_004000.json  dropsline_1cca5e8a5c_004500.json  dropsline_1cca5e8a5c_005000.json  dropsline_1cca5e8a5c_005500.json  dropsline_1cca5e8a5c_006000.json  dropsline_1cca5e8a5c_006500.json  dropsline_1cca5e8a5c_007000.json  dropsline_1cca5e8a5c_007500.json  dropsline_1cca5e8a5c_008000.json  dropsline_1cca5e8a5c_008500.json  dropsline_1cca5e8a5c_009000.json  dropsline_1cca5e8a5c_009500.json  dropsline_1cca5e8a5c_010000.json  dropsline_1cca5e8a5c_010500.json  dropsline_1cca5e8a5c_011000.json  dropsline_1cca5e8a5c_011500.json  dropsline_1cca5e8a5c_012000.json  dropsline_1cca5e8a5c_012500.json  dropsline_1cca5e8a5c_013000.json  dropsline_1cca5e8a5c_013500.json  dropsline_1cca5e8a5c_014000.json  dropsline_1cca5e8a5c_014500.json  dropsline_1cca5e8a5c_015000.json  dropsline_1cca5e8a5c_015500.json  dropsline_1cca5e8a5c_016000.json  dropsline_1cca5e8a5c_016500.json  dropsline_1cca5e8a5c_017000.json  dropsline_1cca5e8a5c_017500.json  dropsline_1cca5e8a5c_018000.json  dropsline_1cca5e8a5c_018500.json  dropsline_1cca5e8a5c_019000.json  dropsline_1cca5e8a5c_019500.json  (+403 more)
(+1975 files in other folders)
